# notification-discord-bot

./: .env.example  .env.test  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yaml
notification_discord_bot/: constants.py  contracts.py  currency.py  data.py  db.py  logger.py  main.py  mixins.py  models.py  nft.py  queries.py  renft.py  resolvers.py  seed.py  utils.py
tests/: test_currency.py  test_db.py  test_utils.py
