[tool.poetry]
name = "notification-discord-bot"
version = "1.0.0"
description = ""
authors = ["nazariyv <naz@renft.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
